--- a/git-intro/style2.css
+++ b/git-intro/style2.css
@@ -16,6 +16,7 @@
     color: #000;
     display: block;
     font-size: 1.8rem;
+    margin-top: 10px;
     padding: 5px 10px;
     text-align: left;
 }
