add style for footnote and footnote-ref

--- a/git/style.css
+++ b/git/style.css
@@ -62,3 +62,14 @@
 .reveal .big-top-margin {
     margin-top: 20px;
 }
+
+.footnote,
+.reveal .footnote {
+    color: lightgray;
+    font-size: 0.8em;
+    font-style: italic;
+}
+.footnote-ref,
+.reveal .footnote-ref {
+    color: gold;
+}
